--- a/index.html
+++ b/index.html
@@ -23,16 +23,25 @@
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(8px);
-      padding: 15px 20px;
       display: flex;
       align-items: center;
-      z-index: 1000;
+      justify-content: center;
+      padding: 10px 20px;
       box-sizing: border-box;
+      z-index: 1000;
+    }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+      max-width: 1200px;
+      width: 100%;
+      position: relative;
     }
 
     .logo {
       height: 40px;
-      margin-right: 10px;
+      margin-right: 15px;
       flex-shrink: 0;
       user-select: none;
     }
@@ -46,9 +55,7 @@
 
     nav a {
       color: white;
-      margin: 0 10px;
       text-decoration: none;
-      font-weight: normal;
       font-size: 1rem;
       white-space: nowrap;
     }
@@ -100,7 +107,6 @@
 
     .hero-content p:last-child {
       margin-top: 10px;
-      text-transform: none;
       cursor: pointer;
       transition: all 0.3s ease;
     }
@@ -162,7 +168,6 @@
       margin: 10px;
     }
 
-    /* Підказка при копіюванні */
     .copied-tooltip {
       position: absolute;
       top: 100%;
@@ -184,22 +189,6 @@
     }
 
     @media (max-width: 768px) {
-      .hero {
-        flex-direction: column;
-        padding: 40px 20px;
-        gap: 30px;
-      }
-
-      .hero-content {
-        max-width: 90%;
-        align-items: center;
-        text-align: center;
-      }
-
-      .hero-image img {
-        max-width: 100%;
-      }
-
       nav {
         flex-wrap: wrap;
         justify-content: center;
@@ -208,20 +197,32 @@
       nav a {
         margin: 5px 10px;
       }
+
+      .hero {
+        flex-direction: column;
+        padding: 40px 20px;
+        gap: 30px;
+      }
+
+      .hero-image img {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
-    <nav>
-      <a href="#about">Про нас</a>
-      <a href="#services">Послуги</a>
-      <a href="#news">Новини</a>
-      <a href="#gallery">Галерея</a>
-      <a href="#contact">Контакти</a>
-      <a href="#sales">Акції</a>
-    </nav>
+    <div class="header-content">
+      <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
+      <nav>
+        <a href="#about">Про нас</a>
+        <a href="#services">Послуги</a>
+        <a href="#news">Новини</a>
+        <a href="#gallery">Галерея</a>
+        <a href="#contact">Контакти</a>
+        <a href="#sales">Акції</a>
+      </nav>
+    </div>
   </header>
 
   <section class="hero">
@@ -276,7 +277,6 @@
   </section>
 
   <script>
-    // Копіювання телефону
     const phone = document.getElementById('phone');
     const tooltip = document.getElementById('tooltip');
 
