--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     .logo {
       height: 40px;
-      margin-right: 60px;
+      margin-right: 20px; /* ← Зменшено відстань до тексту */
       flex-shrink: 0;
       user-select: none;
     }
