--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
       height: auto;
       border-radius: 10px;
       object-fit: contain;
-      box-shadow: 0 0 50px rgba(255, 0, 0, 0.5);
+      box-shadow:
+        inset 0 0 80px rgba(255, 0, 0, 0.5),  /* внутрішнє червоне світло */
+        0 0 50px rgba(255, 0, 0, 0.5);        /* зовнішнє світіння */
     }
 
     .stats {
