--- a/index.html
+++ b/index.html
@@ -115,17 +115,33 @@
       font-weight: bold;
     }
 
+   .hero-image {
+      position: relative;
+      display: inline-block;
+    }
+
+    .hero-image::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(255, 0, 0, 0.4) 0%, transparent 60%);
+      z-index: 0;
+      pointer-events: none;
+    }
+
     .hero-image img {
+      position: relative;
+      z-index: 1;
       max-width: 600px;
       width: 100%;
       height: auto;
       border-radius: 10px;
       object-fit: contain;
-      box-shadow:
-        inset 0 0 80px rgba(255, 0, 0, 0.5),  /* внутрішнє червоне світло */
-        0 0 50px rgba(255, 0, 0, 0.5);        /* зовнішнє світіння */
     }
-
     .stats {
       display: flex;
       flex-wrap: wrap;
