--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
       text-decoration: none;
       font-size: 1rem;
       white-space: nowrap;
+      transition: color 0.3s ease;
+      cursor: pointer;
     }
 
+    /* При наведенні на будь-яку кнопку меню - змінюємо колір на червоний */
     nav a:hover {
-      text-decoration: underline;
+      color: #ff1e1e;
     }
 
     .hero {
