--- a/index.html
+++ b/index.html
@@ -62,9 +62,26 @@
       cursor: pointer;
     }
 
-    /* При наведенні на будь-яку кнопку меню - змінюємо колір на червоний */
     nav a:hover {
       color: #ff1e1e;
+    }
+
+    .phone-diamond {
+      display: inline-block;
+      background: #555;
+      color: white;
+      font-size: 0.9rem;
+      padding: 10px 40px;
+      text-decoration: none;
+      text-transform: uppercase;
+      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
+      transition: background 0.3s ease;
+      margin-left: 20px;
+      white-space: nowrap;
+    }
+
+    .phone-diamond:hover {
+      background: #777;
     }
 
     .hero {
@@ -119,7 +136,6 @@
       transition: color 0.3s ease;
     }
 
-    /* Зміна кольору номера при наведенні */
     #phone:hover strong {
       color: #ff1e1e;
     }
@@ -135,8 +151,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 150%;
-      height: 130%;
+      width: 130%;
+      height: 110%;
       background: radial-gradient(circle, rgba(255, 0, 0, 0.4) 0%, transparent 60%);
       z-index: 0;
       pointer-events: none;
@@ -235,6 +251,10 @@
       .hero-image img {
         max-width: 100%;
       }
+
+      .phone-diamond {
+        display: none; /* можна приховати на мобілках */
+      }
     }
   </style>
 </head>
@@ -250,6 +270,7 @@
         <a href="#contact">Контакти</a>
         <a href="#sales">Акції</a>
       </nav>
+      <a class="phone-diamond" href="tel:0800304774">0800-30-47-74</a>
     </div>
   </header>
 
