--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       white-space: nowrap;
       transition: color 0.3s ease;
       cursor: pointer;
+      font-weight: normal;
     }
 
     nav a:hover {
@@ -81,7 +82,8 @@
     }
 
     .phone-diamond:hover {
-      background: #777;
+      background: #ff1e1e;
+      color: white;
     }
 
     .hero {
@@ -253,7 +255,7 @@
       }
 
       .phone-diamond {
-        display: none; /* можна приховати на мобілках */
+        display: none;
       }
     }
   </style>
