--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       padding: 40px 20px;
       background: #141414;
       text-align: center;
+      perspective: 800px; /* ✅ додаємо перспективу */
     }
 
     .stats-card {
@@ -219,13 +220,12 @@
       border-radius: 10px;
       width: 200px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      perspective: 1000px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transform-style: preserve-3d; /* ✅ потрібно для 3D ефекту */
       will-change: transform;
     }
 
     .stats-card:hover {
-      transform: scale(1.07);
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
       cursor: pointer;
     }
@@ -404,7 +404,7 @@
         const centerY = rect.height / 2;
         const rotateX = ((y - centerY) / centerY) * -10;
         const rotateY = ((x - centerX) / centerX) * 10;
-        card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.07)`;
+        card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
       });
 
       card.addEventListener("mouseleave", () => {
