--- a/index.html
+++ b/index.html
@@ -230,6 +230,28 @@
       cursor: pointer;
     }
 
+    /* Додатковий стиль для заголовка "ЧОМУ НАС ОБИРАЮТЬ" */
+    .stats-header {
+      width: 100%;
+      max-width: 1000px;
+      margin: 0 auto 30px auto;
+      text-align: center;
+      background-color: #1a1a1a;
+      border: 2px solid #2c2c2c;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transform-style: preserve-3d;
+    }
+
+    .stats-header h2 {
+      margin: 0;
+      color: #ff1e1e;
+      font-size: 1.8rem;
+      letter-spacing: 2px;
+    }
+
     .services, .gallery {
       padding: 60px 20px;
       text-align: center;
@@ -323,6 +345,9 @@
   </section>
 
   <section class="stats">
+    <div class="stats-card stats-header">
+      <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
+    </div>
     <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
     <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
     <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
@@ -385,30 +410,28 @@
       const y = e.clientY - rect.top;
       const centerX = rect.width / 2;
       const centerY = rect.height / 2;
-      const rotateX = ((y - centerY) / centerY) * -40;
-      const rotateY = ((x - centerX) / centerX) * 40;
-      heroImage.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.1)`;
+      const rotateX = ((y - centerY) / centerY) * 7; // кут по X
+      const rotateY = ((x - centerX) / centerX) * 7; // кут по Y
+      heroImage.style.transform = `rotateX(${-rotateX}deg) rotateY(${rotateY}deg)`;
     });
-
     document.querySelector(".hero-image").addEventListener("mouseleave", () => {
-      heroImage.style.transform = "rotateX(0deg) rotateY(0deg) scale(1)";
+      heroImage.style.transform = "rotateX(0) rotateY(0)";
     });
 
-    // 3D ефект для .stats-card
-    document.querySelectorAll(".stats-card").forEach(card => {
-      card.addEventListener("mousemove", (e) => {
+    // 3D ефект для карток статистики при наведенні
+    document.querySelectorAll('.stats-card').forEach(card => {
+      card.addEventListener('mousemove', e => {
         const rect = card.getBoundingClientRect();
         const x = e.clientX - rect.left;
         const y = e.clientY - rect.top;
         const centerX = rect.width / 2;
         const centerY = rect.height / 2;
-        const rotateX = ((y - centerY) / centerY) * -10;
-        const rotateY = ((x - centerX) / centerX) * 10;
-        card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
+        const rotateX = ((y - centerY) / centerY) * 5;
+        const rotateY = ((x - centerX) / centerX) * 5;
+        card.style.transform = `rotateX(${-rotateX}deg) rotateY(${rotateY}deg)`;
       });
-
-      card.addEventListener("mouseleave", () => {
-        card.style.transform = "rotateX(0deg) rotateY(0deg) scale(1)";
+      card.addEventListener('mouseleave', e => {
+        e.currentTarget.style.transform = 'rotateX(0) rotateY(0)';
       });
     });
   </script>
